--- a/Service4U/app/src/main/res/layout/activity_main.xml
+++ b/Service4U/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_100"
+    android:background="@drawable/skybluebackground"
     android:orientation="vertical"
     android:weightSum="4">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,15 +26,31 @@
             android:text="@string/welcome"
             android:theme="@style/ThemeOverlay.MyTitleText" />
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            app:srcCompat="@drawable/larry" />
+
         <TextView
             android:id="@+id/status"
             style="@style/ThemeOverlay.MyTextDetail"
-            android:text="@string/signed_out" />
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_weight="0.5"
+            android:text="@string/signed_out"
+            tools:text="You are signed in as:" />
 
         <TextView
             android:id="@+id/detail"
             style="@style/ThemeOverlay.MyTextDetail"
-            tools:text="Firebase User ID: 123456789abc" />
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_weight="0.5"
+            android:text="Username: " />
+
+
 
         <include
             android:id="@+id/allUsersList"
