added stuff to my account page

--- a/Service4U/app/src/main/res/layout/activity_my_account.xml
+++ b/Service4U/app/src/main/res/layout/activity_my_account.xml
@@ -37,6 +37,35 @@
             android:layout_height="wrap_content"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:theme="@style/ThemeOverlay.MyTextDetail"/>
+
+        <TextView
+            android:id="@+id/firstName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:theme="@style/ThemeOverlay.MyTextDetail" />
+
+        <TextView
+            android:id="@+id/lastName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:theme="@style/ThemeOverlay.MyTextDetail" />
+
+        <TextView
+            android:id="@+id/accountType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:theme="@style/ThemeOverlay.MyTextDetail" />
+
+        <TextView
+            android:id="@+id/phoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:theme="@style/ThemeOverlay.MyTextDetail" />
+
         <include
             android:id="@+id/allUsersList"
             layout="@layout/all_users"
