create activiy changes, errors commented out

--- a/Service4U/app/src/main/res/layout/activity_create_account.xml
+++ b/Service4U/app/src/main/res/layout/activity_create_account.xml
@@ -17,7 +17,7 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="109dp"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
@@ -33,7 +33,9 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_create_account" />
+    <include
+        layout="@layout/content_create_account"
+        android:layout_height="449dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
