--- a/Service4U/app/src/main/res/layout/content_create_account.xml
+++ b/Service4U/app/src/main/res/layout/content_create_account.xml
@@ -22,6 +22,13 @@
             android:inputType="textEmailAddress" />
 
         <EditText
+            android:id="@+id/fieldUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <EditText
             android:id="@+id/fieldPassword2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
