--- a/Service4U/app/src/main/res/layout/content_create_account.xml
+++ b/Service4U/app/src/main/res/layout/content_create_account.xml
@@ -150,7 +150,7 @@
                 android:id="@+id/phoneText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/phone" />
+                android:text="@string/phone_title_text" />
 
             <EditText
                 android:id="@+id/fieldPhone"
@@ -158,6 +158,27 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="phone" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/addressText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/address_title_text" />
+
+            <EditText
+                android:id="@+id/fieldAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPostalAddress" />
+
 
         </LinearLayout>
 
