--- a/Service4U/app/src/main/res/layout/content_create_account.xml
+++ b/Service4U/app/src/main/res/layout/content_create_account.xml
@@ -41,20 +41,43 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/nameText"
+                android:id="@+id/firstNameText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/name" />
+                android:text="@string/first_name" />
 
             <EditText
-                android:id="@+id/fieldUsername"
+                android:id="@+id/fieldFirstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textPersonName" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/lastNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/last_name" />
+
+            <EditText
+                android:id="@+id/fieldLastName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
