--- a/Service4U/app/src/main/res/layout/all_users.xml
+++ b/Service4U/app/src/main/res/layout/all_users.xml
@@ -16,13 +16,13 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/usersTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="@string/users" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/usersList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
