--- a/Service4U/app/src/main/res/layout/content_create_account.xml
+++ b/Service4U/app/src/main/res/layout/content_create_account.xml
@@ -97,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:hint="@string/password_hint"
                 android:inputType="textPassword" />
         </LinearLayout>
 
