--- a/Service4U/app/src/main/res/layout/content_services.xml
+++ b/Service4U/app/src/main/res/layout/content_services.xml
@@ -86,13 +86,10 @@
             android:layout_height="wrap_content"
             android:text="Type" />
 
-        <EditText
+        <Spinner
             android:id="@+id/typeField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textView4"
