--- a/Service4U/app/src/main/res/layout/content_services.xml
+++ b/Service4U/app/src/main/res/layout/content_services.xml
@@ -77,8 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView3"
