--- a/Service4U/app/src/main/res/layout/content_services.xml
+++ b/Service4U/app/src/main/res/layout/content_services.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/listServicesLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
@@ -23,26 +23,25 @@
         <android.widget.LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="4">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/serviceNameTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_weight="0.5"
                 android:text="Name" />
 
             <TextView
                 android:id="@+id/serviceTypeTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Type" />
 
             <TextView
                 android:id="@+id/serviceRateTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Rate per hour ($)" />
@@ -51,7 +50,7 @@
         <ListView
             android:id="@+id/listViewServices"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         </ListView>
 
