--- a/Service4U/app/src/main/res/layout/content_services.xml
+++ b/Service4U/app/src/main/res/layout/content_services.xml
@@ -76,6 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:hint="ex. window cleaning"
             android:inputType="textPersonName" />
 
         <TextView
@@ -93,7 +94,7 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Rate" />
+            android:text="Rate ($/hr)" />
 
         <EditText
             android:id="@+id/rateField"
