--- a/Service4U/app/src/main/res/layout/activity_availability_calendar.xml
+++ b/Service4U/app/src/main/res/layout/activity_availability_calendar.xml
@@ -7,8 +7,8 @@
     tools:context=".AvailabilityCalendar">
 
     <CalendarView
-        android:id="@+id/calendarView"
+        android:id="@+id/availabilityCal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal" />
 </android.support.constraint.ConstraintLayout>
