--- a/Service4U/app/src/main/res/layout/activity_availability.xml
+++ b/Service4U/app/src/main/res/layout/activity_availability.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".AvailabilityActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="6">
 
         <ListView
             android:id="@+id/listTimeSlots"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
             android:isScrollContainer="true"
             android:scrollbars="vertical">
 
@@ -25,10 +26,11 @@
             android:id="@+id/setAvailBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_weight="1"
             android:isScrollContainer="false"
             android:onClick="setAvailability"
             android:text="Update availability" />
-    </RelativeLayout>
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
