--- a/Service4U/app/src/main/res/layout/all_users.xml
+++ b/Service4U/app/src/main/res/layout/all_users.xml
@@ -13,7 +13,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:isScrollContainer="true"
+        android:orientation="vertical"
+        android:scrollbars="vertical">
 
         <TextView
             android:id="@+id/usersTitle"
