--- a/Service4U/app/src/main/res/layout/activity_my_services.xml
+++ b/Service4U/app/src/main/res/layout/activity_my_services.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MyServices">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="6">
+
+        <ListView
+            android:id="@+id/listAllServices"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:isScrollContainer="true"
+            android:scrollbars="vertical"/>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
