added back button to calendar

--- a/Service4U/app/src/main/res/layout/all_users.xml
+++ b/Service4U/app/src/main/res/layout/all_users.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/allUsers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:orientation="vertical"
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:isScrollContainer="true"
-        android:orientation="vertical"
-        android:scrollbars="vertical">
-
-        <TextView
+    <TextView
             android:id="@+id/usersTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/users" />
 
-        <TextView
-            android:id="@+id/usersList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+    <TextView
+        android:id="@+id/usersList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:text="" />
+
+</LinearLayout>
