--- a/Service4U/app/src/main/res/layout/activity_availability_calendar.xml
+++ b/Service4U/app/src/main/res/layout/activity_availability_calendar.xml
@@ -6,9 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".AvailabilityCalendar">
 
-    <CalendarView
-        android:id="@+id/availabilityCal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <CalendarView
+            android:id="@+id/availabilityCal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:id="@+id/backToMyAccountBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="back"
+            android:text="@string/back" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
