Added background to MyAccount

--- a/Service4U/app/src/main/res/layout/activity_my_account.xml
+++ b/Service4U/app/src/main/res/layout/activity_my_account.xml
@@ -4,7 +4,7 @@
     android:id="@+id/accountDetailsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_100"
+    android:background="@drawable/skybluebackground"
     android:orientation="vertical"
     android:weightSum="4">
 
