--- a/Service4U/app/src/main/res/values/dimens.xml
+++ b/Service4U/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
