--- a/Service4U/app/src/main/res/layout/activity_main.xml
+++ b/Service4U/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,12 @@
     android:weightSum="4">
 
 
+    <TextView
+        android:id="@+id/userTypeText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
