--- a/Service4U/app/src/main/res/layout/activity_services.xml
+++ b/Service4U/app/src/main/res/layout/activity_services.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ServicesActivity">
 
+    <include
+        layout="@layout/layout_all_services_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <include
+        layout="@layout/activity_my_services"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +28,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    </android.support.design.widget.AppBarLayout>
+    <!--/android.support.design.widget.AppBarLayout-->
 
     <include layout="@layout/content_services" />
 
