--- a/Service4U/app/src/main/res/layout/layout_service_list.xml
+++ b/Service4U/app/src/main/res/layout/layout_service_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     <TextView
         android:id="@+id/serviceNameText"
@@ -25,4 +24,5 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
+
 </android.widget.LinearLayout>
