--- a/Service4U/app/src/main/res/layout/activity_my_services.xml
+++ b/Service4U/app/src/main/res/layout/activity_my_services.xml
@@ -12,19 +12,50 @@
         android:orientation="vertical"
         android:weightSum="6">
 
+        <android.widget.LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/serviceNameTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="Name" />
+
+            <TextView
+                android:id="@+id/serviceTypeTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Type" />
+
+            <TextView
+                android:id="@+id/serviceRateTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Rate per hour ($)" />
+        </android.widget.LinearLayout>
+
         <ListView
             android:id="@+id/listAllServices"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
             android:isScrollContainer="true"
-            android:scrollbars="vertical"/>
+            android:scrollbars="vertical">
+
+        </ListView>
 
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:onClick="associateServices"
+            android:text="Associate Services" />
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
